Esqueleto car grade

--- a/index.html
+++ b/index.html
@@ -173,149 +173,153 @@
                         </spa>
                     </div>
 
-                    <div class="row row-cols-1 row-cols-md-2 g-4">
+                    <div class="row row-cols-1 row-cols-md-4 g-4">
 
                         <div class="col d-flex">
-                            <div class="card">
-                                <a href="#">
-                                    <img src="img/carros/1_1.jpeg" class="card-img-top img-capa" alt="Stingray">
-                                </a>
-                                <div class="card-body pb-4">
-                                    <a href="#" class="text-decoration-none text-dark">
-                                        <h4 class="card-title">
-                                            Stingray
-                                        </h4>
-                                    </a>
-                                    <p class="card-text">
-                                        Marca - Suzuki
-                                        Modelo - Stingray
-                                        Ano - XX
-                                        KM - XXXX
-                                    </p>
-                                    <p class="card-text">
-                                        <small class="text-muted d-flex justify-content-end">
-                                            2024-02-25
-                                        </small>
-                                    </p>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <div class="d-flex justify-content-center">
-                                                <div class="span me-3 btn">
-                                                    <i class="fa-solid fa-share"></i>
-                                                    Compartilhar
-                                                </div>
-                                            </div>
-                                        </div>
+                            <div id="carouselRecente01" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <a href="#">
+                                            <img src="img/carros/1_1.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="#">
+                                            <img src="img/carros/1_2.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="#">
+                                            <img src="img/carros/1_3.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="#">
+                                            <img src="img/carros/1_4.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
                                     </div>
                                 </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselRecente01"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselRecente01"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
                             </div>
                         </div>
 
                         <div class="col d-flex">
-                            <div class="card">
-                                <a href="#">
-                                    <img src="img/carros/2_1.jpeg" class="card-img-top img-capa" alt="N Box">
-                                </a>
-                                <div class="card-body pb-4">
-                                    <a href="#" class="text-decoration-none text-dark">
-                                        <h4 class="card-title">
-                                            N Box
-                                        </h4>
-                                    </a>
-                                    <p class="card-text">
-                                        Marca - Honda
-                                        Modelo - Stingray
-                                        Ano - XX
-                                        KM - XXXX
-                                    </p>
-                                    <p class="card-text">
-                                        <small class="text-muted d-flex justify-content-end">
-                                            2024-02-25
-                                        </small>
-                                    </p>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <div class="d-flex justify-content-center">
-                                                <div class="span me-3 btn">
-                                                    <i class="fa-solid fa-share"></i>
-                                                    Compartilhar
-                                                </div>
-                                            </div>
-                                        </div>
+                            <div id="carouselRecente02" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <a href="#">
+                                            <img src="img/carros/2_1.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="#">
+                                            <img src="img/carros/2_2.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="#">
+                                            <img src="img/carros/2_3.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="#">
+                                            <img src="img/carros/2_4.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
                                     </div>
                                 </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselRecente02"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselRecente02"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
                             </div>
                         </div>
 
                         <div class="col d-flex">
-                            <div class="card">
-                                <a href="#">
-                                    <img src="img/carros/3_1.jpeg" class="card-img-top img-capa" alt="Tanto">
-                                </a>
-                                <div class="card-body pb-4">
-                                    <a href="#" class="text-decoration-none text-dark">
-                                        <h4 class="card-title">
-                                            Tanto
-                                        </h4>
-                                    </a>
-                                    <p class="card-text">
-                                        Marca - Daihatsu
-                                        Modelo - Tanto
-                                        Ano - XX
-                                        KM - XXXX
-                                    </p>
-                                    <p class="card-text">
-                                        <small class="text-muted d-flex justify-content-end">
-                                            2024-02-25
-                                        </small>
-                                    </p>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <div class="d-flex justify-content-center">
-                                                <div class="span me-3 btn">
-                                                    <i class="fa-solid fa-share"></i>
-                                                    Compartilhar
-                                                </div>
-                                            </div>
-                                        </div>
+                            <div id="carouselRecente03" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <a href="#">
+                                            <img src="img/carros/3_1.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="#">
+                                            <img src="img/carros/3_2.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="#">
+                                            <img src="img/carros/3_3.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="#">
+                                            <img src="img/carros/3_4.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
                                     </div>
                                 </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselRecente03"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselRecente03"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
                             </div>
                         </div>
 
                         <div class="col d-flex">
-                            <div class="card">
-                                <a href="#">
-                                    <img src="img/carros/4_1.jpeg" class="card-img-top img-capa" alt="Spacia">
-                                </a>
-                                <div class="card-body pb-4">
-                                    <a href="#" class="text-decoration-none text-dark">
-                                        <h4 class="card-title">
-                                            Spacia
-                                        </h4>
-                                    </a>
-                                    <p class="card-text">
-                                        Marca - Suzuki
-                                        Modelo - Spacia
-                                        Ano - XX
-                                        KM - XXXX
-                                    </p>
-                                    <p class="card-text">
-                                        <small class="text-muted d-flex justify-content-end">
-                                            2024-02-25
-                                        </small>
-                                    </p>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <div class="d-flex justify-content-center">
-                                                <div class="span me-3 btn">
-                                                    <i class="fa-solid fa-share"></i>
-                                                    Compartilhar
-                                                </div>
-                                            </div>
-                                        </div>
+                            <div id="carouselRecente04" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <a href="#">
+                                            <img src="img/carros/4_1.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="#">
+                                            <img src="img/carros/4_2.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="#">
+                                            <img src="img/carros/4_3.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <a href="#">
+                                            <img src="img/carros/4_4.jpeg" class="card-img-top img-capa" alt="Stingray">
+                                        </a>
                                     </div>
                                 </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselRecente04"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselRecente04"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
                             </div>
                         </div>
 
