Menus de pesquisa

--- a/index.html
+++ b/index.html
@@ -324,6 +324,87 @@
                         </div>
 
                     </div>
+
+                    <hr class="my-4">
+
+                    <div class="container py-2 d-flex justify-content-center rounded">
+                        <spa class="custom-text-black">
+                            <h4>Pesquisa</h4>
+                        </spa>
+                    </div>
+
+                    <div>
+                        <ul class="nav nav-tabs" id="myTab" role="tablist">
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link active" id="modelo-tab" data-bs-toggle="tab"
+                                    data-bs-target="#modelo-tab-pane" type="button" role="tab"
+                                    aria-controls="modelo-tab-pane" aria-selected="true">Marca</button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="tipo-tab" data-bs-toggle="tab"
+                                    data-bs-target="#tipo-tab-pane" type="button" role="tab"
+                                    aria-controls="tipo-tab-pane" aria-selected="false">Tipo</button>
+                            </li>
+                        </ul>
+                        <div class="tab-content" id="myTabContent">
+                            <div class="tab-pane fade show active" id="modelo-tab-pane" role="tabpanel"
+                                aria-labelledby="modelo-tab" tabindex="0">
+
+                                <form>
+                                    <div class="row mt-2">
+                                        <div class="col-md-6">
+                                            <label for="formGroupMarcaInput" class="form-label">Marca</label>
+                                            <select class="form-select" aria-label="Seleciona a Marca"
+                                                id="formGroupMarcaInput">
+                                                <option selected>Selecione a marca</option>
+                                                <option value="1">Daihatsu</option>
+                                                <option value="2">Honda</option>
+                                                <option value="3">Lexus</option>
+                                                <option value="4">Mazda</option>
+                                                <option value="5">Mitsubishi</option>
+                                                <option value="6">Nissan</option>
+                                                <option value="7">Subaru</option>
+                                                <option value="8">Suzuki</option>
+                                                <option value="9">Toyota</option>
+                                            </select>
+                                        </div>
+
+                                        <div class="col-md-6">
+                                            <label for="formGroupModeloInput" class="form-label">Modelo</label>
+                                            <select class="form-select" aria-label="Seleciona a Marca"
+                                                id="formGroupModeloInput">
+                                                <option selected>Selecione a marca</option>
+                                                <option value="1">Daihatsu</option>
+                                                <option value="2">Honda</option>
+                                                <option value="3">Lexus</option>
+                                                <option value="4">Mazda</option>
+                                                <option value="5">Mitsubishi</option>
+                                                <option value="6">Nissan</option>
+                                                <option value="7">Subaru</option>
+                                                <option value="8">Suzuki</option>
+                                                <option value="9">Toyota</option>
+                                            </select>
+                                        </div>
+
+                                    </div>
+                                    <button type="submit" class="btn btn-dark mt-2">Submit</button>
+                                </form>
+
+                            </div>
+                            <div class="tab-pane fade" id="tipo-tab-pane" role="tabpanel" aria-labelledby="tipo-tab"
+                                tabindex="0">Tipos</div>
+                        </div>
+
+                    </div>
+
+                    <hr class="my-4">
+
+                    <div class="container py-2 d-flex justify-content-center rounded">
+                        <spa class="custom-text-black">
+                            <h4>Lista de carros</h4>
+                        </spa>
+                    </div>
+
                 </div>
             </div>
         </div>
