--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                                         </div>
 
                                     </div>
-                                    <button type="submit" class="btn btn-dark mt-2">Submit</button>
+                                    <button type="submit" class="btn btn-dark mt-2">Pesquisar</button>
                                 </form>
 
                             </div>
