Ajuste note recentes

--- a/index.html
+++ b/index.html
@@ -420,7 +420,86 @@
 
                             </div>
                             <div class="tab-pane fade" id="tipo-tab-pane" role="tabpanel" aria-labelledby="tipo-tab"
-                                tabindex="0">Tipos</div>
+                                tabindex="0">
+
+                                <!-- Primeira linha -->
+                                <div class="row mt-2 justify-content-center">
+                                    <div class="col-md-2 mb-3">
+                                        <div class="bg-dark p-3 rounded">
+                                            <img src="img/logos/convertibles-icon.svg" class="img-fluid mx-auto d-block"
+                                                alt="...">
+                                            <p class="text-center text-white mb-0 mt-2">Conversível</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2 mb-3">
+                                        <div class="bg-dark p-3 rounded">
+                                            <img src="img/logos/coupes-icon.svg" class="img-fluid mx-auto d-block"
+                                                alt="...">
+                                            <p class="text-center text-white mb-0 mt-2">Cupe</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2 mb-3">
+                                        <div class="bg-dark p-3 rounded">
+                                            <img src="img/logos/hatchs-icon.svg" class="img-fluid mx-auto d-block"
+                                                alt="...">
+                                            <p class="text-center text-white mb-0 mt-2">Hatch</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2 mb-3">
+                                        <div class="bg-dark p-3 rounded">
+                                            <img src="img/logos/mini-icon.svg" class="img-fluid mx-auto d-block"
+                                                alt="...">
+                                            <p class="text-center text-white mb-0 mt-2">Kei</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2 mb-3">
+                                        <div class="bg-dark p-3 rounded">
+                                            <img src="img/logos/sedan-icon.svg" class="img-fluid mx-auto d-block"
+                                                alt="...">
+                                            <p class="text-center text-white mb-0 mt-2">Sedan</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Segunda linha -->
+                                <div class="row mt-2 justify-content-center">
+                                    <div class="col-md-2 mb-3">
+                                        <div class="bg-dark p-3 rounded">
+                                            <img src="img/logos/suv-icon.svg" class="img-fluid mx-auto d-block"
+                                                alt="...">
+                                            <p class="text-center text-white mb-0 mt-2">SUV</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2 mb-3">
+                                        <div class="bg-dark p-3 rounded">
+                                            <img src="img/logos/trucks-icon.svg" class="img-fluid mx-auto d-block"
+                                                alt="...">
+                                            <p class="text-center text-white mb-0 mt-2">Truck</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2 mb-3">
+                                        <div class="bg-dark p-3 rounded">
+                                            <img src="img/logos/vans-icon.svg" class="img-fluid mx-auto d-block"
+                                                alt="...">
+                                            <p class="text-center text-white mb-0 mt-2">Vans</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2 mb-3">
+                                        <div class="bg-dark p-3 rounded">
+                                            <img src="img/logos/wagons-icon.svg" class="img-fluid mx-auto d-block"
+                                                alt="...">
+                                            <p class="text-center text-white mb-0 mt-2">Wagons</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2 mb-3">
+                                        <div class="bg-dark p-3 rounded">
+                                            <img src="img/logos/buses-icon.svg" class="img-fluid mx-auto d-block"
+                                                alt="...">
+                                            <p class="text-center text-white mb-0 mt-2">Outros</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
 
                     </div>
