Ajuste na ordem dos icones

--- a/index.html
+++ b/index.html
@@ -512,6 +512,100 @@
                         </spa>
                     </div>
 
+                    <div class="container">
+                        <!-- Linha 1 -->
+                        <div class="row mt-2 justify-content-center">
+                            <div class="col-md-4">
+                                <div class="border p-1 rounded car-card-text">
+                                    <img src="img/carros/1_1.jpeg" class="img-fluid mx-auto d-block" alt="...">
+                                    <h5 class="mb-0">Suzuki Stingray</h5>
+                                    <p class="mb-0">Ano: XX</p>
+                                    <p class="mb-0">KM: XX</p>
+                                    <h5 class="price mb-0">¥9999999</h5>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="border p-1 rounded car-card-text">
+                                    <img src="img/carros/2_1.jpeg" class="img-fluid mx-auto d-block" alt="...">
+                                    <h5 class="mb-0">Honda N Box</h5>
+                                    <p class="mb-0">Ano: XX</p>
+                                    <p class="mb-0">KM: XX</p>
+                                    <h5 class="price mb-0">¥9999999</h5>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="border p-1 rounded car-card-text">
+                                    <img src="img/carros/3_1.jpeg" class="img-fluid mx-auto d-block" alt="...">
+                                    <h5 class="mb-0">Daihatsu Tanto</h5>
+                                    <p class="mb-0">Ano: XX</p>
+                                    <p class="mb-0">KM: XX</p>
+                                    <h5 class="price mb-0">¥9999999</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Linha 2 -->
+                        <div class="row mt-2 justify-content-center">
+                            <div class="col-md-4">
+                                <div class="border p-1 rounded car-card-text">
+                                    <img src="img/carros/4_1.jpeg" class="img-fluid mx-auto d-block" alt="...">
+                                    <h5 class="mb-0">Suzuki Spacia</h5>
+                                    <p class="mb-0">Ano: XX</p>
+                                    <p class="mb-0">KM: XX</p>
+                                    <h5 class="price mb-0">¥9999999</h5>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="border p-1 rounded car-card-text">
+                                    <img src="img/carros/5_1.jpeg" class="img-fluid mx-auto d-block" alt="...">
+                                    <h5 class="mb-0">Mitsubishi SK Space</h5>
+                                    <p class="mb-0">Ano: XX</p>
+                                    <p class="mb-0">KM: XX</p>
+                                    <h5 class="price mb-0">¥9999999</h5>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="border p-1 rounded car-card-text">
+                                    <img src="img/carros/6_1.jpeg" class="img-fluid mx-auto d-block" alt="...">
+                                    <h5 class="mb-0">Daihatsu Move</h5>
+                                    <p class="mb-0">Ano: XX</p>
+                                    <p class="mb-0">KM: XX</p>
+                                    <h5 class="price mb-0">¥9999999</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Linha 3 -->
+                        <div class="row mt-2 justify-content-center">
+                            <div class="col-md-4">
+                                <div class="border p-1 rounded car-card-text">
+                                    <img src="img/carros/7_1.jpeg" class="img-fluid mx-auto d-block" alt="...">
+                                    <h5 class="mb-0">Suzuki Wagon R</h5>
+                                    <p class="mb-0">Ano: XX</p>
+                                    <p class="mb-0">KM: XX</p>
+                                    <h5 class="price mb-0">¥9999999</h5>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="border p-1 rounded car-card-text">
+                                    <img src="img/carros/8_1.jpeg" class="img-fluid mx-auto d-block" alt="...">
+                                    <h5 class="mb-0">Nissan DayZ</h5>
+                                    <p class="mb-0">Ano: XX</p>
+                                    <p class="mb-0">KM: XX</p>
+                                    <h5 class="price mb-0">¥9999999</h5>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="border p-1 rounded car-card-text">
+                                    <img src="img/carros/9_1.jpeg" class="img-fluid mx-auto d-block" alt="...">
+                                    <h5 class="mb-0">Mazda Flair</h5>
+                                    <p class="mb-0">Ano: XX</p>
+                                    <p class="mb-0">KM: XX</p>
+                                    <h5 class="price mb-0">¥9999999</h5>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
                 </div>
             </div>
         </div>
