Criação da tela de detalhes

--- a/detalhes.html
+++ b/detalhes.html
@@ -202,6 +202,10 @@
                                             sistema de frenagem automática de emergência (AEB), sistema de
                                             reconhecimento de sinais de trânsito e iluminação ambiente interna.</li>
                                     </ul>
+                                    <h5>Financiamento Japonês com visto permanente:</h5>
+                                    <p>Juros à partir de 4.9%</p>
+                                    <p>Dividimos em até 120x</p>
+                                    <p>Sem entrada</p>
                                     <div class="btn btn-dark btn-block w-100">
                                         <i class="fa-brands fa-whatsapp"></i>
                                         Comprar
